code smells fix half