@@ -3,7 +3,6 @@ package com.buildguard.service.impl;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -11,6 +10,7 @@ import com.buildguard.dto.InspectionResponseDto;
 import com.buildguard.entity.Inspection;
 import com.buildguard.entity.ProgressLog;
 import com.buildguard.entity.User;
+import com.buildguard.exception.ResourceNotFoundException;
 import com.buildguard.mapper.InspectionMapper;
 import com.buildguard.repository.InspectionRepository;
 import com.buildguard.repository.ProgressLogRepository;
@@ -19,6 +19,10 @@ import com.buildguard.service.InspectionService;
 
 @Service
 public class InspectionServiceImpl implements InspectionService {
+
+    private static final String INSPECTION_NOT_FOUND = "Inspection not found";
+    private static final String INSPECTOR_NOT_FOUND = "Inspector not found";
+    private static final String PROGRESS_LOG_NOT_FOUND = "Progress Log not found";
 
     private final InspectionRepository inspectionRepository;
     private final UserRepository userRepository;
@@ -46,10 +50,12 @@ public class InspectionServiceImpl implements InspectionService {
             Long progressLogId) {
 
         User inspector = userRepository.findById(inspectorId)
-                .orElseThrow(() -> new RuntimeException("Inspector not found"));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(INSPECTOR_NOT_FOUND));
 
         ProgressLog progressLog = progressLogRepository.findById(progressLogId)
-                .orElseThrow(() -> new RuntimeException("Progress Log not found"));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(PROGRESS_LOG_NOT_FOUND));
 
         Inspection inspection = new Inspection();
 
@@ -71,14 +77,15 @@ public class InspectionServiceImpl implements InspectionService {
         return inspectionRepository.findAll()
                 .stream()
                 .map(inspectionMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public InspectionResponseDto getInspectionById(Long id) {
 
         Inspection inspection = inspectionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Inspection not found"));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(INSPECTION_NOT_FOUND));
 
         return inspectionMapper.toDto(inspection);
     }
@@ -89,7 +96,7 @@ public class InspectionServiceImpl implements InspectionService {
         return inspectionRepository.findByProgressLogId(progressLogId)
                 .stream()
                 .map(inspectionMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -100,7 +107,8 @@ public class InspectionServiceImpl implements InspectionService {
             String remarks) {
 
         Inspection inspection = inspectionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Inspection not found"));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(INSPECTION_NOT_FOUND));
 
         inspection.setInspectionDate(LocalDate.parse(inspectionDate));
         inspection.setStatus(status);
@@ -115,7 +123,8 @@ public class InspectionServiceImpl implements InspectionService {
     public void deleteInspection(Long id) {
 
         Inspection inspection = inspectionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Inspection not found"));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(INSPECTION_NOT_FOUND));
 
         inspectionRepository.delete(inspection);
     }
