@@ -3,7 +3,6 @@ package com.buildguard.service.impl;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -12,6 +11,7 @@ import com.buildguard.dto.ProgressLogResponseDto;
 import com.buildguard.entity.ProgressLog;
 import com.buildguard.entity.Project;
 import com.buildguard.entity.User;
+import com.buildguard.exception.ResourceNotFoundException;
 import com.buildguard.mapper.ProgressLogMapper;
 import com.buildguard.repository.ProgressLogRepository;
 import com.buildguard.repository.ProjectRepository;
@@ -21,6 +21,11 @@ import com.buildguard.service.S3Service;
 
 @Service
 public class ProgressLogServiceImpl implements ProgressLogService {
+
+    private static final String PROJECT_NOT_FOUND = "Project not found";
+    private static final String USER_NOT_FOUND = "User not found";
+    private static final String UPLOADER_NOT_FOUND = "Uploaded By User not found";
+    private static final String PROGRESS_LOG_NOT_FOUND = "Progress Log not found";
 
     private final ProgressLogRepository progressLogRepository;
     private final ProjectRepository projectRepository;
@@ -53,31 +58,27 @@ public class ProgressLogServiceImpl implements ProgressLogService {
             MultipartFile image) {
 
         Project project = projectRepository.findById(projectId)
-                .orElseThrow(() -> new RuntimeException("Project not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(PROJECT_NOT_FOUND));
 
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
 
         User uploader = userRepository.findById(uploadedBy)
-                .orElseThrow(() -> new RuntimeException("Uploaded By User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(UPLOADER_NOT_FOUND));
 
         String imageUrl = s3Service.uploadFile(image);
 
         ProgressLog progressLog = new ProgressLog();
 
         progressLog.setDescription(description);
-
         progressLog.setImageName(image.getOriginalFilename());
         progressLog.setImageSize(image.getSize());
         progressLog.setImageType(image.getContentType());
         progressLog.setImageUrl(imageUrl);
-
         progressLog.setUploadedAt(LocalDateTime.now());
         progressLog.setCreatedAt(LocalDateTime.now());
-
         progressLog.setWorkDate(LocalDate.parse(workDate));
         progressLog.setWorkStatus(workStatus);
-
         progressLog.setProject(project);
         progressLog.setUser(user);
         progressLog.setUploadedBy(uploader);
@@ -93,14 +94,14 @@ public class ProgressLogServiceImpl implements ProgressLogService {
         return progressLogRepository.findAll()
                 .stream()
                 .map(progressLogMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ProgressLogResponseDto getProgressLogById(Long id) {
 
         ProgressLog progressLog = progressLogRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Progress Log not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(PROGRESS_LOG_NOT_FOUND));
 
         return progressLogMapper.toDto(progressLog);
     }
@@ -111,7 +112,7 @@ public class ProgressLogServiceImpl implements ProgressLogService {
         return progressLogRepository.findByProjectId(projectId)
                 .stream()
                 .map(progressLogMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -123,7 +124,7 @@ public class ProgressLogServiceImpl implements ProgressLogService {
             MultipartFile image) {
 
         ProgressLog progressLog = progressLogRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Progress Log not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(PROGRESS_LOG_NOT_FOUND));
 
         progressLog.setDescription(description);
         progressLog.setWorkDate(LocalDate.parse(workDate));
@@ -131,11 +132,11 @@ public class ProgressLogServiceImpl implements ProgressLogService {
 
         if (image != null && !image.isEmpty()) {
 
-            if (progressLog.getImageUrl() != null &&
-                    !progressLog.getImageUrl().isEmpty()) {
+            if (progressLog.getImageUrl() != null
+                    && !progressLog.getImageUrl().isEmpty()) {
 
                 String oldKey = progressLog.getImageUrl()
-                        .substring(progressLog.getImageUrl().lastIndexOf("/") + 1);
+                        .substring(progressLog.getImageUrl().lastIndexOf('/') + 1);
 
                 s3Service.deleteFile(oldKey);
             }
@@ -158,13 +159,13 @@ public class ProgressLogServiceImpl implements ProgressLogService {
     public void deleteProgressLog(Long id) {
 
         ProgressLog progressLog = progressLogRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Progress Log not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(PROGRESS_LOG_NOT_FOUND));
 
-        if (progressLog.getImageUrl() != null &&
-                !progressLog.getImageUrl().isEmpty()) {
+        if (progressLog.getImageUrl() != null
+                && !progressLog.getImageUrl().isEmpty()) {
 
             String fileKey = progressLog.getImageUrl()
-                    .substring(progressLog.getImageUrl().lastIndexOf("/") + 1);
+                    .substring(progressLog.getImageUrl().lastIndexOf('/') + 1);
 
             s3Service.deleteFile(fileKey);
         }
